@@ -51,6 +51,8 @@ This release includes the following bugfixes:
  o SFTP infinite loop when given an invalid quote command
  o curl-config erroneously reported LDAPS support with missing LDAP libraries
  o SCP infinite loop when downloading a zero byte file
+ o setting the CURLOPT_SSL_CTX_FUNCTION with libcurl built without OpenSSL
+   now makes curl_easy_setopt() properly return failure
 
 This release includes the following known bugs:
 
