@@ -6,6 +6,11 @@
 
                                   Changelog
 
+Daniel Stenberg (25 Mar 2008)
+- Made setting the CURLOPT_SSL_CTX_FUNCTION option return a failure in case
+  libcurl wasn't built to use OpenSSL as that is a prerequisite for this
+  option to function!
+
 Daniel Stenberg (22 Mar 2008)
 - Fixed the problem with doing a zero byte SCP transfer, verified with test
   case 617 (which was added by Daniel Fandrich 5 Mar 2008).
